--- a/micheleMedeiros_PropostaII/src/app/components/body/about/about.component.html
+++ b/micheleMedeiros_PropostaII/src/app/components/body/about/about.component.html
@@ -1,1 +1,94 @@
 <p>about works!</p>
+<body>
+  <div class="content1">
+    <div class="content1-blockLeft">
+      <div class="content1-imgR" id="imgR">
+        <img src="../../../../assets/img_right.jpg" alt="" />
+      </div>
+      <div class="content1-text1">
+        <h2 class="content1-blockLeft-title" id="title1">Sobre:</h2>
+        <section>
+          <span>
+            Portugal, localizado na Península Ibérica, é um país encantador e
+            diversificado. Com uma história rica que remonta a séculos, oferece
+            aos visitantes uma mistura única de patrimônio cultural, paisagens
+            deslumbrantes e uma rica tradição gastronômica.
+          </span>
+          <br />
+          <br />
+          <span>
+            Das belas praias do Algarve às montanhas do Douro Vinhateiro, dos
+            castelos medievais às charmosas cidades históricas, Portugal cativa
+            com sua autenticidade e hospitalidade.
+          </span>
+          <br />
+          <br />
+        </section>
+        <button class="button-arrow button">
+          <span class="home-text07">Read more</span>
+          <span class="home-text08">&gt;</span>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="content1">
+    <div class="content1-blockLeft">
+      <div class="content1-imgR" id="imgR">
+        <img src="../../../../assets/img_right.jpg" alt="" />
+      </div>
+      <div class="content1-text1">
+        <h2 class="content1-blockLeft-title" id="title1">Sobre:</h2>
+        <br />
+        <section>
+          <span>
+            Portugal, localizado na Península Ibérica, é um país encantador e
+            diversificado. Com uma história rica que remonta a séculos, oferece
+            aos visitantes uma mistura única de patrimônio cultural, paisagens
+            deslumbrantes e uma rica tradição gastronômica.
+          </span>
+          <br />
+          <br />
+          <span>
+            Das belas praias do Algarve às montanhas do Douro Vinhateiro, dos
+            castelos medievais às charmosas cidades históricas, Portugal cativa
+            com sua autenticidade e hospitalidade.
+          </span>
+          <br />
+          <br />
+        </section>
+        <button class="button-arrow button">
+          <span class="home-text07">Read more</span>
+          <span class="home-text08">&gt;</span>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="content2">
+    <div class="content2-blockRight">
+      <div class="content2-imgL" id="imgL">
+        <img src="../../../../assets/img_L.jpg" alt="" />
+      </div>
+      <div class="content2-text2">
+        <h2 class="content1-blockRight-title">Descubra a Alma de Portugal:</h2>
+        <br />
+        <section>
+          <span>
+            Venha explorar a rica cultura portuguesa e suas tradições enraizadas
+            em séculos de história. Embarque em uma jornada emocionante através
+            da música apaixonada do fado, das danças tradicionais como o vira e
+            o corridinho, e dos festivais animados que celebram a identidade
+            única de cada região.
+          </span>
+          <br />
+          <br />
+        </section>
+        <button class="button-arrow button">
+          <span class="home-text07">Read more</span>
+          <span class="home-text08">&gt;</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</body>
