Paginas "About" e "Destination" OK

--- a/micheleMedeiros_PropostaII/src/app/components/body/about/about.component.html
+++ b/micheleMedeiros_PropostaII/src/app/components/body/about/about.component.html
@@ -1,44 +1,11 @@
-<p>about works!</p>
 <body>
   <div class="content1">
     <div class="content1-blockLeft">
       <div class="content1-imgR" id="imgR">
-        <img src="../../../../assets/img_right.jpg" alt="" />
+        <img src="../../../../assets/img_right.png" alt="" />
       </div>
       <div class="content1-text1">
-        <h2 class="content1-blockLeft-title" id="title1">Sobre:</h2>
-        <section>
-          <span>
-            Portugal, localizado na Península Ibérica, é um país encantador e
-            diversificado. Com uma história rica que remonta a séculos, oferece
-            aos visitantes uma mistura única de patrimônio cultural, paisagens
-            deslumbrantes e uma rica tradição gastronômica.
-          </span>
-          <br />
-          <br />
-          <span>
-            Das belas praias do Algarve às montanhas do Douro Vinhateiro, dos
-            castelos medievais às charmosas cidades históricas, Portugal cativa
-            com sua autenticidade e hospitalidade.
-          </span>
-          <br />
-          <br />
-        </section>
-        <button class="button-arrow button">
-          <span class="home-text07">Read more</span>
-          <span class="home-text08">&gt;</span>
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <div class="content1">
-    <div class="content1-blockLeft">
-      <div class="content1-imgR" id="imgR">
-        <img src="../../../../assets/img_right.jpg" alt="" />
-      </div>
-      <div class="content1-text1">
-        <h2 class="content1-blockLeft-title" id="title1">Sobre:</h2>
+        <h2 class="content1-titleA">Sobre:</h2>
         <br />
         <section>
           <span>
@@ -57,10 +24,13 @@
           <br />
           <br />
         </section>
-        <button class="button-arrow button">
-          <span class="home-text07">Read more</span>
-          <span class="home-text08">&gt;</span>
+        <button class="content1-buttonA">
+          <span>Read more</span>
+          <span>&gt;</span>
         </button>
+        <div class="content1-imgR_II" id="imgR">
+          <img src="../../../../assets/right_II.png" alt="" />
+        </div>
       </div>
     </div>
   </div>
@@ -68,10 +38,10 @@
   <div class="content2">
     <div class="content2-blockRight">
       <div class="content2-imgL" id="imgL">
-        <img src="../../../../assets/img_L.jpg" alt="" />
+        <img src="../../../../assets/img_left.png" alt="" />
       </div>
       <div class="content2-text2">
-        <h2 class="content1-blockRight-title">Descubra a Alma de Portugal:</h2>
+        <h2 class="content1-titleA">Descubra a Alma de Portugal:</h2>
         <br />
         <section>
           <span>
@@ -84,10 +54,13 @@
           <br />
           <br />
         </section>
-        <button class="button-arrow button">
-          <span class="home-text07">Read more</span>
-          <span class="home-text08">&gt;</span>
+        <button class="content2-buttonA">
+          <span>Read more</span>
+          <span>&gt;</span>
         </button>
+        <div class="content2-imgL_II" id="imgL">
+          <img src="../../../../assets/left_II.png" alt="" />
+        </div>
       </div>
     </div>
   </div>
