--- a/micheleMedeiros_PropostaII/src/app/components/header/header.component.scss
+++ b/micheleMedeiros_PropostaII/src/app/components/header/header.component.scss
@@ -1,5 +1,5 @@
 header {
-  width: 100%;
+  max-width: 100%;
   height: 93vh;
   background-image: url(../../../assets/belem-tower.jpg);
   background-position: center;
