--- a/micheleMedeiros_PropostaII/src/app/components/body/destinations/destinations.component.scss
+++ b/micheleMedeiros_PropostaII/src/app/components/body/destinations/destinations.component.scss
@@ -43,13 +43,14 @@ body {
       font-family: "Karla", sans-serif;
       font-weight: 400;
       margin-top: 10px;
+      margin-right: 0px;
       text-align: justify;
       line-height: 2;
     }
     &-title {
       font-family: "Cormorant Infant", sans-serif;
       font-weight: 700;
-      font-size: 24px;
+      font-size: 26px;
       margin-top: 15px;
     }
   }
@@ -77,9 +78,11 @@ body {
 
       &-title {
         padding: 0 20px;
+        text-align: center;
       }
 
       &-description {
+        margin: 0px 0px 0px 0px;
         padding: 0 20px;
       }
     }
@@ -89,22 +92,14 @@ body {
       padding: 0 20px;
     }
   }
-}
-.destinos {
-  &-titleD {
-    font-family: "Cormorant Infant", sans-serif;
-    font-weight: 700;
-    font-size: 60px;
-    margin-top: 60px;
-  }
-
-  &-descricao {
-    font-family: "Karla", sans-serif;
-    font-weight: 400;
-    margin-top: 10px;
-    margin-bottom: 50px;
-    padding: 0 65px;
-    font-size: 15px;
+  .destinos {
+    &-titleD {
+      font-size: 60px;
+    }
+    &-descricao {
+      font-size: 18px;
+      line-height: 2;
+    }
   }
 }
 
@@ -114,6 +109,19 @@ body {
       width: 350px;
       height: auto;
       padding: 0 20px;
+    }
+    &-item {
+      &-title {
+        text-align: center;
+      }
+    }
+    &-description {
+      text-align: center;
+    }
+  }
+  .destinos {
+    &-titleD {
+      font-size: 45px;
     }
   }
 }
