--- a/micheleMedeiros_PropostaII/src/app/app.component.html
+++ b/micheleMedeiros_PropostaII/src/app/app.component.html
@@ -1,6 +1,15 @@
-<app-navbar></app-navbar>
-<app-header></app-header>
-<app-body></app-body>
-<app-about></app-about>
-<app-destinations></app-destinations>
-<app-footer></app-footer>
+<header>
+  <app-navbar></app-navbar>
+  <app-header></app-header>
+</header>
+
+<body>
+  <app-body></app-body>
+  <app-about></app-about>
+  <app-destinations></app-destinations>
+</body>
+
+<footer>
+  <app-footer></app-footer>
+  <app-alunos></app-alunos>
+</footer>
