--- a/micheleMedeiros_PropostaII/src/app/components/footer/footer.component.html
+++ b/micheleMedeiros_PropostaII/src/app/components/footer/footer.component.html
@@ -1,1 +1,19 @@
 <p>footer works!</p>
+<footer class="footer" id="footer">
+  <div class="footer-logo">
+    <img src="../../../../assets/logo_II.svg" alt="Logo" />
+  </div>
+  <div class="footer">
+    <h2 class="footer-titleF">Autores do Projeto</h2>
+    <ul class="footer-textF">
+      <li>
+        {{ grupo.nomeAluno1 }} - Número {{ grupo.numeroAluno1 }} - Turma
+        {{ grupo.turmaAluno1 }} - Email: {{ grupo.emailAluno1 }}
+      </li>
+      <li>
+        {{ grupo.nomeAluno2 }} - Número {{ grupo.numeroAluno2 }} - Turma
+        {{ grupo.turmaAluno2 }} - Email: {{ grupo.emailAluno2 }}
+      </li>
+    </ul>
+  </div>
+</footer>
