--- a/micheleMedeiros_PropostaII/src/app/components/header/navbar/navbar.component.html
+++ b/micheleMedeiros_PropostaII/src/app/components/header/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="#">
+      <img src="../../../../assets/logo.svg" alt="Logo" />
+    </a>
     <button
       class="navbar-toggler"
       type="button"
