--- a/micheleMedeiros_PropostaII/src/app/app.component.html
+++ b/micheleMedeiros_PropostaII/src/app/app.component.html
@@ -7,9 +7,9 @@
   <app-body></app-body>
   <app-about></app-about>
   <app-destinations></app-destinations>
+  <app-testimony></app-testimony>
 </body>
 
 <footer>
   <app-footer></app-footer>
-  <app-alunos></app-alunos>
 </footer>
