--- a/micheleMedeiros_PropostaII/src/app/components/body/about/about.component.html
+++ b/micheleMedeiros_PropostaII/src/app/components/body/about/about.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="content1">
+  <div class="content1" id="about">
     <div class="content1-blockLeft">
       <div class="content1-imgR" id="imgR">
         <img src="../../../../assets/img_right.png" alt="" />
