--- a/micheleMedeiros_PropostaII/src/app/components/body/destinations/destinations.component.html
+++ b/micheleMedeiros_PropostaII/src/app/components/body/destinations/destinations.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="destinos">
+  <div class="destinos" id="destinations">
     <h1 class="destinos-titleD">Explore Portugal</h1>
     <br />
     <p class="destinos-descricao">
