--- a/micheleMedeiros_PropostaII/src/app/app.component.html
+++ b/micheleMedeiros_PropostaII/src/app/app.component.html
@@ -4,7 +4,7 @@
 </header>
 
 <body>
-  <app-body></app-body>
+  <app-main></app-main>
   <app-about></app-about>
   <app-destinations></app-destinations>
   <app-testimony></app-testimony>
