Ajuste no footer - 100%OK

--- a/micheleMedeiros_PropostaII/src/app/components/footer/footer.component.html
+++ b/micheleMedeiros_PropostaII/src/app/components/footer/footer.component.html
@@ -13,6 +13,8 @@
         {{ grupo.nomeAluno2 }} - Número {{ grupo.numeroAluno2 }} - Turma
         {{ grupo.turmaAluno2 }} - Email: {{ grupo.emailAluno2 }}
       </li>
+      <li>Ferramentas e aplicações multimédia</li>
+      <li>2022/2023</li>
     </ul>
   </div>
 </footer>
